# vdwp

./: .gitignore  .gitmodules  Derivations.ipynb  Derivations_ipynb.ipynb  LatentHeat.ipynb  MDdata  Pipfile  README.md  free_energy_of_cage_occupation.ipynb  fvalue.py  latent_heat.ipynb  lattice  mattoutility.py  package.json  physconst.py  pyproject.toml  system8.py
2017/: .gitignore  CageIntegral  Makefile  chempot.py  crystals.py  derivative.py  fridge.py  fvalue.py  group14.py  histo.py  histo2f.py  methane.py  molecule.py  phasediagram.py  phasediagram_simple.py  physconst.py  relocate.py  report.py  system Bromine.py  system copy 2.py  system copy.py  system.py  system2.py  system3.py  system7.py  system7_THF.py  system7_cPen.py  system8.py  test_ljd.py  vdWP.py
MT2022/: .gitignore  Figure1.py  Figure2.py  Figure3.py  Figure4.py  LJparam.py  Makefile  README.txt  cageradii.py  lattice  ljd
MT2022-prepare/: Figure3.py  LJparam.py  Makefile  README.txt  fridge.pickle  fridge.py  phasediagram.py  vdwp
articles/: 5050358fe56cfa.md  Derivations2025.md  tanaka-theory-2025.md
bucket/: A15retry.0.nx3a  C15retry.0.nx3a  Z-Yang2009.0.nx3a  sigma-udachinx1.006.0.nx3a
cage_integral/: .gitignore  DEFR  Makefile  README.md  cage.py  fvalue.py  histo.py  histo2f.py  histogram.py  loader.py  molecule.py  plot.ipynb
histogram/: .gitignore  Makefile  histogram.cpp
lattice/: Z-Yang2009
ljd/: ljd.py
svelte-app/: package.json
vdwp/: Makefile  __init__.py  antoine.py  cage.py  chempot.py  crystals.py  decorators.py  general.py  normalmode.py  physconst.py  vdWP.py
(+85 files in other folders)
